# openAV-ArtyFX

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  PACKAGING  README  README.md  archive.sh  artyFX_headers.xcf  artyfx.cxx  artyfx_ui.cxx  biquad.c  biquad.h  cutoff.c  cutoff.h  cutoff.ttl  cutoff_ui.cpp  cutoff_widget.fl  header.c  main.cxx  makefile  manifest.ttl.in  manual.md  meson.build  meson_options.txt  mod_build  run_della.sh  run_ducka.sh  run_filta.sh  run_masha.sh  run_roomy.sh  run_satma.sh  test_ui.cxx  test_ui.hxx  updateAvtk.sh  wscript  xembed.cc  xembed.hh
artyfx.lv2/: bitta.ttl  capta.ttl  della.ttl  driva.ttl  ducka.ttl  filta.ttl  friza.ttl  kuiza.ttl  manifest.ttl  masha.ttl  panda.ttl  roomy.ttl  satma.ttl  vihda.ttl  whaaa.ttl
artyfx.lv2/modgui/: data-filta.json  data-roomy.json  filta.js  icon-filta.html
avtk/: avtk.hxx  box.cxx  button.cxx  button.hxx  common.cxx  common.hxx  dial.cxx  dial.hxx  dialog.cxx  dialog.hxx  envelope.cxx  envelope.hxx  eventeditor.cxx  eventeditor.hxx  filebrowser.cxx  filebrowser.hxx  group.cxx  group.hxx  helpers.cxx  helpers.hxx  image.cxx  image.hxx  list.cxx  list.hxx  listitem.cxx  listitem.hxx  midi.cxx  midi.hxx  number.cxx  number.hxx  scroll.cxx  scroll.hxx  slider.cxx  slider.hxx  spectrum.cxx  spectrum.hxx  tester.cxx  tester.hxx  theme.cxx  theme.hxx  (+11 more)
avtk/pugl/: event.h  pugl.h  pugl_internal.h  pugl_win.cpp  pugl_x11.c
avtk/themes/: orange.avtk
bitta/: makefile  run.sh
bitta/bitta.lv2/: bitta.ttl  manifest.ttl
bitta/dsp/: dsp.cxx  dsp_bitcrusher.hxx  shared.hxx  test.cpp
bitta/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
bitta/planning/: wideHeader.xcf
capta/dsp/: dsp.cxx  manifest.ttl
capta/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
cutoff/: biquad.h  cutoff.c  cutoff.h  cutoff.ttl  cutoff_ui.cpp  cutoff_widget.fl  header.c  run.sh  wscript
cutoff/planning/: wideHeader.xcf
della/: makefile  run.sh
della/della.lv2/: della.ttl  manifest.ttl
della/dsp/: della_test.cpp  dsp.cxx  dsp_delay.hxx  shared.hxx
della/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
della/planning/: wideHeader.xcf
driva/dsp/: dsp.cxx  gnuplot.script  makefile  plotter.h  shared.hxx  stomp_test.cxx  test.cpp
driva/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
ducka/: makefile  run.sh
ducka/dsp/: dsp.cxx  ducka.cxx  ducka.hxx  test.cpp
ducka/ducka.lv2/: ducka.ttl  manifest.ttl
ducka/gui/: avtk.h  ducka_ui.cxx  ducka_widget.cxx  ducka_widget.fl  ducka_widget.h  header.c  ui.hxx
ducka/planning/: wideHeader.xcf
filta/: makefile  run.sh
filta/dsp/: dsp.cxx  dsp_filters.hxx  shared.hxx  test.cpp
filta/filta.lv2/: filta.ttl  manifest.ttl
filta/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
filta/planning/: wideHeader.xcf
filta/ui/: README  filtergraph.h
friza/dsp/: dsp.cxx  dsp_linearbrown.hxx  dsp_plotter.hxx  dsp_sample_hold.hxx  plotTest.cxx  shared.hxx
friza/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
kuiza/: makefile  run.sh
kuiza/dsp/: README  dsp.cxx  dsp_parameteric.hxx  shared.hxx
kuiza/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
kuiza/kuiza.lv2/: kuiza.ttl  manifest.ttl
kuiza/planning/: wideHeader.xcf
libs/: audioGen.hxx  plotter.hxx
lv2/: makefile  test.dsp  testUi.cxx
lv2/avtk.lv2/: avtk.ttl  manifest.ttl
lv2/test.lv2/: manifest.ttl  test.ttl
masha/: makefile  run.sh
masha/dsp/: dsp_masher.hxx  masha.cxx  masha.hxx  test.cpp
masha/gui/: avtk.h  header.c  masha_ui.cxx  masha_widget.cxx  masha_widget.fl  masha_widget.h  ui.hxx
masha/masha.lv2/: manifest.ttl  masha.ttl
masha/planning/: wideHeader.xcf
panda/: README  makefile  run.sh
panda/dsp/: dsp.cxx  dsp_compander.hxx  shared.hxx  test.cpp
panda/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
panda/panda.lv2/: manifest.ttl  panda.ttl
panda/planning/: wideHeader.xcf
planning/: artyFX_headers.xcf  header.xcf
roomy/: makefile  run.sh
roomy/dsp/: dsp.cxx  dsp_reverb.hxx  roomy.cxx  roomy.hxx  shared.hxx  test.cpp
roomy/gui/: avtk.h  header.c  roomy_ui.cxx  roomy_widget.cxx  roomy_widget.fl  roomy_widget.h  ui.hxx
roomy/planning/: wideHeader.xcf
roomy/roomy.lv2/: manifest.ttl  roomy.ttl
satma/: makefile  run.sh
satma/dsp/: dsp.cxx  dsp_distortion.hxx  shared.hxx  test.cpp
satma/gui/: avtk.h  header.c  ui.cxx  ui.hxx  widget.cxx  widget.fl  widget.h
satma/planning/: wideHeader.xcf
satma/satma.lv2/: manifest.ttl  satma.ttl
src/: Makefile  artyfx.cxx  meson.build
src/dsp/: README  artyfx.cxx  bitta.cxx  bitta.hxx  capta.cxx  capta.hxx  della.cxx  della.hxx  driva.cxx  driva.hxx  dsp_bitcrusher.hxx  dsp_compander.hxx  dsp_delay.hxx  dsp_distortion.hxx  dsp_filters.hxx  dsp_filters_svf.hxx  dsp_masher.hxx  dsp_parameteric.hxx  dsp_reverb.hxx  dsp_wah.hxx  dsp_widener.hxx  ducka.cxx  ducka.hxx  filta.cxx  filta.hxx  kuiza.cxx  kuiza.hxx  masha.cxx  masha.hxx  meson.build  panda.cxx  panda.hxx  perf_test.cpp  ringbuffer.cxx  ringbuffer.h  roomy.cxx  roomy.hxx  satma.cxx  satma.hxx  vihda.cxx  (+3 more)
src/dsp/eq/: INSTALL  Makefile  README  exp2ap.cc  filters.cc  filters.h  filters_if.cc  ladspa.h  ladspaplugin.h  meson.build
src/dsp/rr/: AnalogFilter.cxx  AnalogFilter.h  Filter_.h  StompBox.cxx  StompBox.h  Waveshaper.cxx  Waveshaper.h  a.out  analog_filter_test.c  config.h  f_sin.h  global.h  meson.build  stompboxTest.c
src/dsp/zix/: sem.h  thread.h
tests/: blarg.xpm  dial_test.cxx  dial_test.hxx  dialog_test.cxx  dialog_test.hxx  event_editor_test.cxx  event_editor_test.hxx  group_test.cxx  group_test.hxx  key_test.cxx  key_test.hxx  list_test.cxx  list_test.hxx  main.cxx  number_test.cxx  resize_test.hxx  waveform_test.cxx  waveform_test.hxx
ui/: button.h  compander.h  crusher.h  delaygraph.h  dial.h  drive.h  filtergraph.h  hold.h  masher.h  parameteric.h  record.h  reverb.h  sidechain_gain.h  wah.h  waveshaper.h  widener.h
vihda/: makefile  run.sh
(+192 files in other folders)
